@@ -36,9 +36,10 @@ CP	= cp
 CFLAGS	= -g -O2 -Wall 
 ELIB_OBJS = ./src/el_error.o\
 	./src/el_time.o\
+	./src/posix/el_posix_time.o\
 	./src/posix/el_posix_mutex.o\
 	./src/posix/el_posix_rwlock.o\
-	./src/posix/el_posix_time.o
+	./src/posix/el_posix_sem.o
 
 
 all: lib 
