@@ -38,10 +38,11 @@ CFLAGS	= -O2 -W3 -MD -GS -Zi -Fd"vc.pdb" -DNDEBUG\
 	-D_CRT_SECURE_NO_DEPRECATE -D_CRT_NONSTDC_NO_WARNINGS
 ELIB_OBJS = el_error.obj\
 	el_time.obj\
+	el_win32_time.obj\
 	el_win32_internal.obj\
 	el_win32_mutex.obj\
 	el_win32_rwlock.obj\
-	el_win32_time.obj
+	el_win32_sem.obj
 
 
 all: lib 
